# linux-resources-monitoring-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
deployment/: monitor.service
docs/: API.md  CONFIG.md  DEPLOYMENT.md  DEVELOPMENT.md  PRE_COMMIT_SETUP.md  RELIABILITY.md
grafana/provisioning/dashboards/: linux-metrics-dashboard.json
monitor_service/: __init__.py  alerts.py  cloud_ingestion.py  metric_collector.py  utils.py
scripts/: setup-pre-commit.sh
tests/: alerts_test.py  cloud_ingestion_test.py  metric_collector_test.py
